Changed some styling in the main.css to fix some css overflow issue in reduced window size caused maybe due to some padding and margin issues.

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -6,6 +6,8 @@
     flex-wrap: nowrap;
     font-family: sans-serif;
     justify-content: space-between;
+    overflow-x: hidden;
+    overflow-x: clip !important;
 }
 
 a {
